--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div></div>
+    <div>
+    </div>
     <main>
         <h1>Jimi Hendrix</h1>
         <nav>
