only advanced selectors

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <a href="">Best Songs</a>
             <a href="">Monterrey 67</a>
         </nav>
-        <section id="section-one">
-            <div class="upper">  
+        <section>
+            <div>  
                 <article>
                     <h2>ARE YOU EXPERIENCED?</h2>
                     <h3>Released May 1967</h3>
@@ -30,8 +30,8 @@
                     </ul>
                     <p>Are You Experienced is the debut studio album by the Jimi Hendrix Experience. Released in 1967, the LP was an immediate critical and commercial success, and it is widely regarded as one of the greatest albums of all time. The album features Jimi Hendrixs innovative approach to songwriting and electric guitar playing which soon established a new direction in psychedelic and hard rock music. </p>
                 </article>
-                <div class="right-section">
-                    <div class="album">
+                <div>
+                    <div>
                         <img src="../images/hover1.jpg" alt="Jimi Hendrix Picture">
                         <img src="../images/album-one.jpg" alt="Album Cover">
                     </div>
@@ -58,7 +58,7 @@
                     </div>
                 </div>
             </div>
-            <div class="bottom-section">
+            <div>
                 <div>
                     <p>In 2013, Mojo magazine listed "Are You Experienced?" as the greatest guitar album of all time.</p>
                 </div>
@@ -74,8 +74,8 @@
                 </div>
             </div>
         </section>
-        <section id="section-two">
-            <div class="upper">
+        <section>
+            <div>
                 <article>
                     <h2>AXIS: BOLD AS LOVE</h2>
                     <h3>Released Dec 1967</h3>
@@ -87,8 +87,8 @@
                     </ul>
                     <p>Axis: Bold As Love is the second album by the Jimi Hendrix Experience. Track Records first released in the United Kingdom on December 1, 1967, only seven months after the release of the groups highly successfull debut, Are You Experienced? In the United States, Reprise Records delayed the release until the following month, The album reached the top ten in the album chartrs in both UK and USA.  </p>
                 </article>
-                <div class="right-section">
-                    <div class="album">
+                <div>
+                    <div>
                         <img src="../images/hover2.jpg" alt="Jimi Hendrix Picture">
                         <img src="../images/album-two.jpg" alt="Album Cover">
                     </div>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
             </div>
-            <div class="bottom-section">
+            <div>
                 <div>
                     <p>Axis: Bold As Love´s scheduled release date was almost delayed when Hendrix lost the master tape of side one of the LP, leaving it in the back seat of a London taxi. With the deadline looming, Hendrix, Chas Chandler, and engineer Eddie Kramer remixed most of side one in a single overnight session.</p>
                 </div>                
