--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 </article>
                 <div>
                     <div>
-                        <img src="../images/hover1.jpg" alt="Jimi Hendrix Picture">
-                        <img src="../images/album-one.jpg" alt="Album Cover">
+                        <img src="/Images/hover1(1).jpg" alt="Jimi Hendrix Picture">
+                        <img src="/Images/album-one(1).jpg" alt="Album Cover">
                     </div>
                     <div>
                         <p>Side One</p>
@@ -89,8 +89,8 @@
                 </article>
                 <div>
                     <div>
-                        <img src="../images/hover2.jpg" alt="Jimi Hendrix Picture">
-                        <img src="../images/album-two.jpg" alt="Album Cover">
+                        <img src="/Images/hover2(1).jpg" alt="Jimi Hendrix Picture">
+                        <img src="/Images/album-two(1).jpg" alt="Album Cover">
                     </div>
                     <div>
                         <p>Side One</p>
