--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-    </div>
+    <div></div>
     <main>
         <h1>Jimi Hendrix</h1>
         <nav>
@@ -129,7 +128,7 @@
                 </div>
             </div>
         </section>
-        <footer>Only for learning purposes, By Theo</footer>
+        <footer>Incomplete Website, for learning purposes.</footer>
     </main>
 </body>
 </html>
