--- a/sidan/index.html
+++ b/sidan/index.html
@@ -31,8 +31,8 @@
                 </article>
                 <div>
                     <div>
-                        <img src="/Images/hover1(1).jpg" alt="Jimi Hendrix Picture">
-                        <img src="/Images/album-one(1).jpg" alt="Album Cover">
+                        <img src="Images/hover1(1).jpg"Jimi Hendrix Picture">
+                        <img src="Images/album-one(1).jpg" alt="Album Cover">
                     </div>
                     <div>
                         <p>Side One</p>
@@ -88,8 +88,8 @@
                 </article>
                 <div>
                     <div>
-                        <img src="/Images/hover2(1).jpg" alt="Jimi Hendrix Picture">
-                        <img src="/Images/album-two(1).jpg" alt="Album Cover">
+                        <img src="Images/hover2(1).jpg" alt="Jimi Hendrix Picture">
+                        <img src="Images/album-two(1).jpg" alt="Album Cover">
                     </div>
                     <div>
                         <p>Side One</p>
